test/files/neg/t6934/ScalaMain.scala
package test2

object ScalaMain {

  def main(args: Array[String]) {
    val a = test.JavaClass.STATIC_PROTECTED_FIELD
  }

}